--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.1",
+    "jss": "^10.6.0",
+    "jss-rtl": "^0.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-bar": "0.0.7",
     "react-query": "^3.16.0",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.13.9",
     "recompose": "^0.30.0",
+    "redux": "^4.1.0",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
