--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "autosuggest-highlight": "^3.1.1",
+    "bourbon": "^7.0.0",
+    "bourbon-neat": "^4.0.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "jss": "^10.6.0",
     "jss-rtl": "^0.3.0",
+    "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.17.5",
     "react-loading-bar": "0.0.7",
     "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
@@ -24,6 +30,8 @@
     "redux": "^4.1.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^1.1.3",
+    "sass-loader": "^11.1.0",
+    "sass-material-colors": "0.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
