--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-intl": "^5.17.5",
     "react-loading-bar": "0.0.7",
