--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.9"
+    "@storybook/react": "^6.2.9",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24"
   }
 }
