--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bourbon-neat": "^4.0.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
+    "history": "^5.0.0",
     "jss": "^10.6.0",
     "jss-rtl": "^0.3.0",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -25,6 +27,8 @@
     "react-loading-bar": "0.0.7",
     "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.13.9",
     "recompose": "^0.30.0",
