--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bourbon-neat": "^4.0.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
-    "history": "^5.0.0",
+    "history": "4.7.2",
     "jss": "^10.6.0",
     "jss-rtl": "^0.3.0",
     "moment": "^2.29.1",
@@ -28,7 +28,7 @@
     "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.13.9",
     "recompose": "^0.30.0",
